# auto-vid-editor

./: .gitignore  ENHANCEMENTS.md  LOCAL_MODELS_GUIDE.md  README.md  SETUP_COMPLETE.md  cleanup_artifacts.sh  cleanup_video_outputs.sh  pyproject.toml  run_local_test.sh  run_production_local.sh
HOMEVID_ai_edited/analysis/: chunk_01.md  chunk_01_shots.json  chunk_02.md  chunk_02_shots.json  chunk_03.md  chunk_03_shots.json  chunk_04.md  chunk_04_shots.json  people.md
HOMEVID_ai_edited/new/: render_manifest.json
HOMEVID_ai_edited/plan/: plan.json  plan.md
src/ai_video_editor/: __init__.py  cli.py  cli_local.py  config.py  editing_plan.py  editor.py  ffmpeg_utils.py  local_planner.py  mlx_planner.py  planner.py  quality_reviewer.py  video_splitter.py
src/ai_video_editor/analysis/: audio_analysis.py  base.py  local_qwen_vl.py  mlx_qwen_vl.py  nexa_qwen_vl.py  pipeline.py  qwen_vl.py  scene_detection.py  transcription.py  validators.py
tests/: test_editing_plan.py  test_editor.py  test_quality_reviewer.py  test_validators.py
